# Algo

./: CMakeLists.txt
TD1/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  ex5.cpp  main.cpp  prog
TD2/: exemple1.cpp  exemple2.cpp  exemple3.cpp  exemple4.cpp  exemple5.cpp  exo1  exo1.cpp  exo2  exo2.cpp  exo3  exo3.cpp  exo4  exo4.cpp  exo5  exo5.cpp  prog  prog2  prog3  pseudo-code.txt
TD3/: exemple1  exemple1.cpp  exo1.cpp  pseudo-code.txt
TD4/: Exercice7.cpp  exemple1.cpp  exercice1.cpp  exercice2.cpp  exercice3.cpp  exercice4.cpp  exercice6.cpp  exo4  exo6  prog  pseudo-code.txt
TD5/: exemple1  exemple1.cpp  exemple2  exemple2.cpp  exercice2.cpp  exercice4.cpp  exercice5.cpp  exercice6.cpp  exercice7.cpp  exercice8.cpp  exercice9.cpp  exo2  exo4  exo5  exo6  exo7  exo8  exo9  pseudo-code.txt
TD6/: exemple1  exemple1.cpp  pseudo-code.txt  quicksort  quicksort.cpp
TD7/: entree.hpp  exemple2  exemple2.cpp  exercice1.cpp  exercice2.cpp  exercice3.cpp  exo1  exo2  exo3  journal.hpp  personne.hpp  pseudo-code.txt  tabdynamique.hpp
complexité/: pseudo-code.txt
exo_perso/: ex1.cpp  ex3.cpp  exo2.cpp  exo4.cpp
exo_perso/tableau/: exo2.cpp  exo3.cpp  exo4.cpp
